# stabilizer

./: .gitignore  DESIGN.md  README.md  initial-thoughts.md  pyproject.toml  requirements-ubuntu.txt  workshop.yaml
stabilizer/: __init__.py  __main__.py  cli.py  orchestrator.py  types.py  utils.py
stabilizer/nodes/: __init__.py  get_repository.py  identify_applicable_fixes.py  identify_commit_range.py  identify_safe_changes.py  identify_testable_changes.py  prepare_paperwork.py  report.py  version_identifier.py
stabilizer/prompts/: get_repository.txt  safe_changes.txt  testable_changes.txt
tests/: test_stabilizer.py
