[project]
name = "stabilizer"
version = "0.1.0"
description = "Automated SRU candidate identification and preparation for Ubuntu packages"
requires-python = ">=3.12"
license = {text = "GPL-3.0-only"}
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
stabilizer = "stabilizer.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["stabilizer*"]
