[project]
name = "stabilizer"
version = "0.1.0"
description = "Automated SRU candidate identification and preparation for Ubuntu packages"
requires-python = ">=3.12"
license = {text = "GPL-3.0-only"}
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
stabilizer = "stabilizer.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stabilizer*"]
namespaces = false

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"
